# bse_tm_final

./: .gitignore  README.md  Readme.md  analysis.ipynb  main.tex  pyproject.toml  st_test.ipynb  stata.do  synapseml.ipynb  synthdid.ipynb
LaTex/: appendix.tex  commands.tex  packages.tex
LaTex/chapters/: part1.tex  part1_lit_rev.tex  part2.tex  part3.tex  part4.tex  part5.tex  references.bib  references2.bib
code/: 1_data_extraction.ipynb  1_data_extraction.py  2_1_intro.ipynb  2_2_synapseml.ipynb  2_eda.ipynb  2_eda.py  3_1_preprocessing.ipynb  3_1_preprocessing_batch.ipynb  3_1_preprocessing_batch_so.ipynb  3_1_preprocessing_batch_so.py  3_1_preprocessing_other.py  3_2_text_metrics.ipynb  3_2_text_metrics.py  3_3_processing.ipynb  3_3_processing.py  3_preprocessing.ipynb  metrics.py  nlp.do  preprocessing.ipynb  stata.do  tfidf.py
code/archive/: 2_2_synapseml.ipynb  3_1_preprocessing.ipynb  batch_preproc.py
data/post/: Françoise Sagan - Bonjour Tristesse.txt  Jean-Paul Sartre - The Age of Reason.txt
data/pre/: Gustave Flaubert - Madame Bovary.txt  Guy de Maupassant - Bel-Ami.txt  Honoré de Balzac - Père Goriot.txt  Marcel Proust - Swann's Way.txt
imgs/: process_flow.mmd
